--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "react-error-overlay": "^6.0.11",
     "tailwindcss": "^3.3.1",
     "vite": "^4.3.0"
   }
