data fetched from the api and mapped over the screen in a div

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GITHUB_URL = https://api.github.com
+VITE_GITHUB_URL = https://api.github.com
 VITE_GITHUB_TOKEN=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
 
 
